# KiroAgenticSwarmPOC

./: .gitignore  README.md  aws-endpoints.env
.kiro/settings/: mcp.json
.kiro/specs/: add-rate-limiting.md
.kiro/specs/weather-data-collection/: .config.kiro  design.md  requirements.md
.kiro/steering/: constitution.md  product.md  structure.md  tech.md
agents/: Dockerfile  core_init.py  models.py  pyproject.toml  requirements.txt  schemas.py  sessions.py  supervisor.py  worker_loop.py
agents/judges/: architect_judge.py  base_judge.py  developer_judge.py  reviewer_judge.py  tester_judge.py
agents/runtime/: main.py
agents/specialists/: architect.py  developer.py  reviewer.py  tester.py
mcp-server/: pyproject.toml
mcp-server/src/swarm_mcp/: __init__.py  agentcore_client.py  context.py  handlers.py  server.py  sessions.py  tools.py
sample-repo/: Dockerfile  pyproject.toml
sample-repo/app/: config.py  db.py  limiter.py  main.py
sample-repo/app/dependencies/: auth.py
sample-repo/app/models/: task.py
sample-repo/app/routers/: tasks.py
sample-repo/app/schemas/: task.py
sample-repo/app/services/: tasks.py
sample-repo/tests/: conftest.py  test_rate_limit.py  test_tasks.py
scripts/: bootstrap.ps1  bootstrap.sh  patch_mcp_config.py
