[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nortal-swarm-agents"
version = "0.3.0"
description = "Strands swarm: supervisor + 4 specialists + 4 judges (AgentCore Runtime)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "strands-agents>=1.41",
  "boto3>=1.35",
  "botocore[crt]>=1.35",
  "pydantic>=2.7",
  "structlog>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]
