[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nortal-swarm-mcp"
version = "0.1.0"
description = "MCP server for Nortal Kiro swarm (AgentCore bridge)"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "boto3>=1.35",
    "botocore[crt]>=1.35",
    "pydantic>=2.7",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
nortal-swarm-mcp = "swarm_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swarm_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/swarm_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
